--- a/index.html
+++ b/index.html
@@ -224,9 +224,10 @@
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/portfolio-img6.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/SignLanguageDigitsPrediction">Sign language digits prediction using CNNs</a></h4>
+								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/YOLOObjectDetection">YOLO Object Detection Algorithm</a></h3>
+								<h4>Medium Article</h4>
 							</div>
 					</div>
 				</div>
