update to portfolio

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img6.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/YOLOObjectDetection">YOLO Object Detection Algorithm</a></h3>
+								<h3><a style="text-decorations:none; color:inherit;" href="https://medium.com/@shika.shyam14/understanding-how-yolo-algorithm-for-object-detection-works-dfbbb9bc2875">YOLO Object Detection Algorithm</a></h3>
 								<h4>Medium Article</h4>
 							</div>
 					</div>
