--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 						<h2 class="rotate">DATA SCIENCE ENTHUSIAST, DATA ENGINEER, PROBLEM SOLVER , GRADUATE STUDENT</h2>
 						<p style="color:ghostwhite">Hello There ! </p>
 						<p style="color:ghostwhite">I am an MS in Informations Systems graduate student with a passion for solving business problems by harnessing the power of Data. With over three years of experience working as a Data Engineer, I bring together an amalgamation of Technical prowess and Business Acumen. </p>
+						<h3></h3>
+						<ul class="social-icon">
+							<li><a href="#" class="fa fa-linkedin fa-2x"></a></li>
+							<li><a href="#" class="fa fa-github fa-2x"></a></li>
+							<li><a href="#" class="fa fa-medium fa-2x"></a></li>
+						</ul>
 						<a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Tell me more</a>
 					</div>
 					<div class="col-md-2"></div>
@@ -154,10 +160,10 @@
 
 				</div>
 				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="col-md-8 wow fadeIn vertical-center" data-wow-delay="0.9s">
+					<div class="col-md-5"></div>
+					<div class="col-md-2 wow fadeIn vertical-center" data-wow-delay="0.9s">
 						<h3></h3>
-						<a href="" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Download my Resume</a>
+						<a href="images/resume2022.pdf" download="images/resume2022.pdf" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Download my Resume</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
@@ -174,7 +180,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="wow bounce">PORTFOLIO</h2>
+					<h2 class="wow bounce">MY WORK</h2>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
@@ -241,22 +247,17 @@
 		<div id="contact" class="section">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+					<div class="col-md-8 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-phone"></i> (617) 510 6560 </p>
+							<p>I'm currently looking out for co-ops or internships starting Summer 2022 in the field of Data Science/Data Engineering/ Business Analyst.</p>
+							<p>Please reach out to me you're hiring, have any questions or just want to have a fun discussion!</p>
+							<h3></h3>
+							<p><i class="fa fa-phone"></i> (617) 510 6560</p>
+							<p><i class="fa fa-map-marker"></i> Boston, Massachusetts 02120</p>
 							<p><i class="fa fa-envelope-o"></i> shyam.s@northeastern.edu </p>
 							<p><i class="fa fa-envelope-o"></i> shika.shyam@yahoo.com </p>
-							<p><i class="fa fa-map-marker"></i> Boston, Massachusetts 02120</p>
 						</address>
-					</div>
-					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
-						<form role="form" method="post" action="#">
-							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
-							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
-							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
-							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
-						</form>
 					</div>
 					<div class="col-md-1 col-sm-1"></div>
 				</div>
@@ -269,15 +270,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
-						<p>Copyright &copy; 2022 Shika Shyam Portfolio
+						<p>Copyright &copy; 2022 Shika Shyam | shika.shyam@yahoo.com </p>
                         
-                        . Template designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p>
-						<hr>
-						<ul class="social-icon">
-							<li><a href="#" class="fa fa-facebook-square"></a></li>
-							<li><a href="#" class="fa fa-twitter"></a></li>
-							<li><a href="#" class="fa fa-instagram"></a></li>
-						</ul>
+
 					</div>
 				</div>
 			</div>
