Added social links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 						<p style="color:ghostwhite">I am an MS in Informations Systems graduate student with a passion for solving business problems by harnessing the power of Data. With over three years of experience working as a Data Engineer, I bring together an amalgamation of Technical prowess and Business Acumen. </p>
 						<h3></h3>
 						<ul class="social-icon">
-							<li><a href="#" class="fa fa-linkedin fa-2x"></a></li>
-							<li><a href="#" class="fa fa-github fa-2x"></a></li>
-							<li><a href="#" class="fa fa-medium fa-2x"></a></li>
+							<li><a href="https://www.linkedin.com/in/shshyam/" class="fa fa-linkedin fa-2x"></a></li>
+							<li><a href="https://github.com/shikashyam" class="fa fa-github fa-2x"></a></li>
+							<li><a href="https://medium.com/@shikashyam" class="fa fa-medium fa-2x"></a></li>
 						</ul>
 						<a href="#about" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Tell me more</a>
 					</div>
