--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Lavish - Free Responsive Template</title>
+		<title>Shika Shyam | Portfolio </title>
 		<meta name="keywords" content="">
 		<meta name="description" content="">
         <meta name="author" content="templatemo">
@@ -223,7 +223,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/CovidCareSystem">Titanic Survival Prediction - Kaggle Contest</a></h3>
+								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/CovidCareSystem">Covid Quarantining Solution</a></h3>
 								<h4>Java Swing Application</h4>
 							</div>
 					</div>
@@ -251,7 +251,7 @@
 						<address>
 							<p class="contact-title">CONTACT ME</p>
 							<p>I'm currently looking out for co-ops or internships starting Summer 2022 in the field of Data Science/Data Engineering/ Business Analyst.</p>
-							<p>Please reach out to me you're hiring, have any questions or just want to have a fun discussion!</p>
+							<p>Please reach out to me if you're hiring, have any questions or just want to collaborate!</p>
 							<h3></h3>
 							<p><i class="fa fa-phone"></i> (617) 510 6560</p>
 							<p><i class="fa fa-map-marker"></i> Boston, Massachusetts 02120</p>
