--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h3><a href="https://github.com/shshyam147/CovidCareSystem">Covid Quarantining Solution</a></h3>
+								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/CovidCareSystem">Covid Quarantining Solution</a></h3>
 								<h4>Java Swing Application</h4>
 							</div>
 					</div>
