--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta property="og:image" content="images/image-shika-2">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="1024">
+		<meta property="og:image:height" content="1024">
 
 		<title>Shika Shyam | Portfolio </title>
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<meta name="keywords" content="">
 		<meta name="description" content="">
         <meta name="author" content="templatemo">
+
         <!-- 
         Lavish HTML CSS Template
         https://templatemo.com/tm-458-lavish
@@ -28,6 +37,7 @@
 		<link rel="stylesheet" href="css/jquery.fullPage.css">
 		<!-- custom -->
 		<link rel="stylesheet" href="css/templatemo-style.css">
+
 
 	</head>
 	<body>
