--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<meta property="og:image" content="images/image-shika-2">
-		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:type" content="image/jpg">
 		<meta property="og:image:width" content="1024">
 		<meta property="og:image:height" content="1024">
+		<meta property='og:title' content='Shika Shyam | Portfolio'/>
+		<meta property='og:description' content='A portfolio of my work and background'/>
+		<meta property='og:url' content='https://shikashyam.github.io'/>
 
 		<title>Shika Shyam | Portfolio </title>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
