--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta property="og:image" content="images/image-shika-2">
-		<meta property="og:image:type" content="image/jpg">
-		<meta property="og:image:width" content="1024">
-		<meta property="og:image:height" content="1024">
+		<meta property="og:image" content="images/image-shika-2.jpg">
 		<meta property='og:title' content='Shika Shyam | Portfolio'/>
 		<meta property='og:description' content='A portfolio of my work and background'/>
 		<meta property='og:url' content='https://shikashyam.github.io'/>
