--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
 
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/portfolio-img4.png" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shshyam147/FoodOrderingSystem">Food ordering System</a></h3>
-								<h4>Java Swing Application</h4>
+								<h3><a style="text-decorations:none; color:inherit;" href="https://github.com/shikashyam/SEVIRStormDataVisualizations">Visualizing SEVIR Storm details data</a></h3>
+								<h4>Google Data Studio</h4>
 							</div>
 					</div>
 				</div>
